# metrics

./: .gitignore  CMakeLists.txt  Dockerfile.metrics  README.md  dashboard.json  docker-compose.yml  prometheus.yml
cmake/: ExternalLibraries.cmake
docs/: DESCR_EN.md  DESCR_RU.md
lib/: CMakeLists.txt
lib/metric/: CMakeLists.txt  abstract-metric.hpp  metric-info.hpp  metric.hpp
lib/metric-calculator/: CMakeLists.txt  metric-calculator-interface.hpp
lib/metric-calculator/average/: CMakeLists.txt  metric-average-calculator.cpp  metric-average-calculator.hpp
lib/metric-calculator/sum/: CMakeLists.txt  metric-sum-calculator.cpp  metric-sum-calculator.hpp  metrics-sum-calculator.hpp
lib/metrics-processor/: CMakeLists.txt  metrics-processor.cpp  metrics-processor.hpp
lib/writer/: CMakeLists.txt  metrics-writer-interface.hpp
lib/writer/file-writer/: CMakeLists.txt  metrics-file-writer.cpp  metrics-file-writer.hpp
lib/writer/prometheus-writer/: CMakeLists.txt  metrics-prometheus-writer.cpp  metrics-prometheus-writer.hpp
tests/: CMakeLists.txt
